# crabinfo

./: .gitignore  Cargo.toml  Dockerfile  README.md  trivy.yml
.github/workflows/: trivy.yml
src/: delay.rs  jwt.rs  lib.rs  main.rs  status.rs  zpages.rs
